# SmartNav

./: CMakeLists.txt  a.txt  start-build.sh
cgen/commonapi-generator/: artifacts.xml
cgen/commonapi-generator/configuration/: config.ini
cgen/commonapi-generator/configuration/org.eclipse.core.runtime/.manager/: .fileTable.7  .fileTable.8
cgen/commonapi-generator/configuration/org.eclipse.osgi/: framework.info.37  framework.info.39  framework.info.41  framework.info.44  framework.info.45
cgen/commonapi-generator/configuration/org.eclipse.osgi/.manager/: .fileTable.37  .fileTable.38  .fileTable.39  .fileTable.40  .fileTable.41  .fileTable.42  .fileTable.44  .fileTable.45  .fileTable.46
cgen/commonapi-generator/configuration/org.eclipse.update/: platform.xml
cgen/commonapi-generator/features/org.genivi.commonapi.console.feature_3.1.12.v201907221047/: feature.xml
cgen/commonapi-generator/features/org.genivi.commonapi.console.franca.feature_3.1.12.v201907221047/: feature.xml
cgen/commonapi-generator/features/org.genivi.commonapi.core.cli.feature_3.1.12.v201907221047/: feature.xml
cgen/someip-generator/: artifacts.xml
cgen/someip-generator/configuration/: config.ini
cgen/someip-generator/configuration/org.eclipse.core.runtime/.manager/: .fileTable.7  .fileTable.8
cgen/someip-generator/configuration/org.eclipse.osgi/: framework.info.47  framework.info.52  framework.info.54
cgen/someip-generator/configuration/org.eclipse.osgi/.manager/: .fileTable.47  .fileTable.48  .fileTable.52  .fileTable.53  .fileTable.54  .fileTable.55
cgen/someip-generator/configuration/org.eclipse.update/: platform.xml
cgen/someip-generator/features/org.genivi.commonapi.someip.cli.feature_3.1.12.v201907221223/: feature.xml
cmake/: toolchain.cmake
cmake/module/: FindFDEPLGenerator.cmake  FindFIDLGenerator.cmake
db/: CMakeLists.txt  map_data.osm  map_demo.db
fidl/: CMakeLists.txt  DestanionInput.fidl  DestinationInput.fdepl  DestinationInput.fidl  HelloWorld.fdepl  HelloWorld.fidl  Navigation.fdepl  Navigation.fidl  Position.fdepl  Position.fidl  RouteCalculation.fdepl  RouteCalculation.fidl
fidl/depl/: Navigation.fdepl
resource/: CMakeLists.txt
script/: CMakeLists.txt  start_all.sh  start_hmi.sh  start_services.sh  stop_all.sh  stop_hmi.sh  stop_services.sh
src/: CMakeLists.txt
src/Hello/: CMakeLists.txt  HelloWorldClient.cpp  HelloWorldService.cpp  HelloWorldStubImpl.cpp  HelloWorldStubImpl.hpp
src/Navigation/: CMakeLists.txt
src/da/: CMakeLists.txt  da_compiler_util.cpp  da_test.cpp  dataaccess.cpp  dataacess.cpp  dataacess.h  dataread.cpp  main.cpp  main2.cpp  mainChinaCity.cpp
src/hmi/: CMakeLists.txt  UIChinaCity.cpp  ddwidget.pro  destinationinput.cpp  destinationinput.h  destinationinput.ui  destinationinput.ui.autosave  main.cpp  map.cpp  map.h  map.ui  music.cpp  music.h  music.ui  poi.cpp  poi.h  poi.ui  position.cpp  position.cpp.autosave  position.h  position.h.autosave  position.ui  widget.cpp  widget.h  widget.ui
src/navcore/: CMakeLists.txt
src/navcore/destinationinput/: DestinationInputClient.cpp  DestinationInputStubImpl.cpp
src/navcore/di/: CMakeLists.txt  DestinationInputService.cpp  DestinationInputStubImpl.cpp  DestinationInputStubImpl.hpp  NavigationClient.cpp
src/navcore/position/: CMakeLists.txt  PositionService.cpp  PositionStubImpl.cpp  PositionStubImpl.hpp
src/navcore/ri/: RouteInfoService.cpp  RouteInfoStubImpl.hpp
src/navcore/route/: CMakeLists.txt  NavigationService.cpp  RouteCalculationService.cpp  RouteCalculationStubImpl.cpp  RouteCalculationStubImpl.hpp  routes.txt
src/navcore/ti/: CMakeLists.txt
