cmake_minimum_required(VERSION 2.8)


install(FILES background.jpg DESTINATION image)

install(FILES Seq.png DESTINATION image)

install(FILES Icon1.png DESTINATION image)

install(FILES Icon2.jpg DESTINATION image)

install(FILES Icon3.png DESTINATION image)

install(FILES arrow1.png DESTINATION image)

install(FILES arrow2.png DESTINATION image)

install(FILES arrow3.png DESTINATION image)

install(FILES arrow4.png DESTINATION image)

install(FILES car.png DESTINATION image)
